Fix navbar search alignment and logo padding

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -108,7 +108,7 @@ footer p:last-child {
 }
 
 .search-bar {
-  width: 55%;
+  width: 71%;
 }
 
 .navbar-brand img {
